refactor: event service to use merchant ID instead of brand ID
